# EHR-R1

./: .env.sample  .gitignore  README.md  accelerate_config.yaml  pyproject.toml
preprocess/: preprocess_db.py  preprocess_db_mimic_iv.py  preprocess_utils.py
slurm/: train.slurm
src/ehr_r1/: __init__.py  evaluate.py  evaluate_execution.py  inference.py  train.py
src/ehr_r1/evaluation/: evaluator.py
src/ehr_r1/models/: __init__.py  reward_model.py
src/ehr_r1/templates/: few_shot_prompt.jinja2  omnisql_prompt.jinja2  simple_sql_prompt.jinja2
src/ehr_r1/training/: __init__.py  grpo_trainer.py
src/ehr_r1/utils/: __init__.py  config.py  evaluate.py  logger.py  prompts.py  schema.py  sql_executor.py
