[project]
name = "ehr-r1"
version = "0.1.0"
description = "EHR-R1: Reinforcement Learning for EHRSQL using TRL"
authors = [{name = "facerain"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "trl>=0.7.0",
    "datasets>=2.12.0",
    "accelerate>=0.20.0",
    "peft>=0.4.0",
    "wandb>=0.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "sqlparse>=0.4.0",
    "tqdm>=4.65.0",
    "vllm>=0.10.1.1",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
train = "ehr_r1.train:main"
evaluate = "ehr_r1.evaluate:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
